--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 .header {
-    background-image: url('https://woodmizer.co.uk/media/wysiwyg/art_4_1.jpg'); /* Replace with the path to your woodmill image */
+    background-image: url('images/background.JPG'); /* Updated to new image path */
     background-size: cover;
     background-position: center;
     color: white;
