--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,31 @@ body {
     padding: 0;
 }
 
+.navbar {
+    height: 25vh; /* Navbar height */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #333;
+}
+
+.navbar ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+}
+
+.navbar li {
+    margin: 0 15px;
+}
+
+.navbar a {
+    color: white;
+    text-decoration: none;
+    font-size: 1.2em;
+}
+
 .header {
     background-image: url('images/background.JPG'); /* Updated to new image path */
     background-size: cover;
@@ -12,6 +37,7 @@ body {
     text-align: center;
     padding: 100px 0;
     position: relative;
+    height: 75vh; /* Adjusted height to 75% VH */
 }
 
 .header:before { /* Added black overlay with 50% transparency */
