--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #333;
+    background-color: black; /* Changed navbar background to black */
 }
 
 .navbar ul {
